--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,19 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4ecc44fd",
+   "execution_count": 15,
+   "id": "ba3d1038",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "98578842",
+   "execution_count": 16,
+   "id": "339638c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from imblearn.metrics import classification_report_imbalanced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2a532cc6",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +233,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,8 +247,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c1f908d4",
+   "execution_count": 18,
+   "id": "ab9f1c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.unique of 0        221900.0\n",
+       "1        538000.0\n",
+       "2        180000.0\n",
+       "3        604000.0\n",
+       "4        510000.0\n",
+       "           ...   \n",
+       "21608    360000.0\n",
+       "21609    400000.0\n",
+       "21610    402101.0\n",
+       "21611    400000.0\n",
+       "21612    325000.0\n",
+       "Name: price, Length: 21613, dtype: float64>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kc_house_data[\"price\"].unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a93b72de",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +439,7 @@
        "4 -122.045  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,8 +451,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c981d4ee",
+   "execution_count": 20,
+   "id": "d79f22f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,8 +461,410 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "dc38cc4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [\"bedrooms\", \"bathrooms\", \"sqft_living\", \"sqft_lot\", \"floors\", \"condition\", \"grade\", \"sqft_above\", \"sqft_basement\",\n",
+    "           \"yr_built\", \"yr_renovated\", \"zipcode\", \"lat\", \"long\"]\n",
+    "target = [\"price\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1daf375d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create our features\n",
+    "X = cleaned_house_data.drop(columns='price')\n",
+    "# Create our target\n",
+    "y = cleaned_house_data.loc[:, target].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "97f81b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>2.161300e+04</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "      <td>21613.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.370842</td>\n",
+       "      <td>2.114757</td>\n",
+       "      <td>2079.899736</td>\n",
+       "      <td>1.510697e+04</td>\n",
+       "      <td>1.494309</td>\n",
+       "      <td>3.409430</td>\n",
+       "      <td>7.656873</td>\n",
+       "      <td>1788.390691</td>\n",
+       "      <td>291.509045</td>\n",
+       "      <td>1971.005136</td>\n",
+       "      <td>84.402258</td>\n",
+       "      <td>98077.939805</td>\n",
+       "      <td>47.560053</td>\n",
+       "      <td>-122.213896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.930062</td>\n",
+       "      <td>0.770163</td>\n",
+       "      <td>918.440897</td>\n",
+       "      <td>4.142051e+04</td>\n",
+       "      <td>0.539989</td>\n",
+       "      <td>0.650743</td>\n",
+       "      <td>1.175459</td>\n",
+       "      <td>828.090978</td>\n",
+       "      <td>442.575043</td>\n",
+       "      <td>29.373411</td>\n",
+       "      <td>401.679240</td>\n",
+       "      <td>53.505026</td>\n",
+       "      <td>0.138564</td>\n",
+       "      <td>0.140828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>290.000000</td>\n",
+       "      <td>5.200000e+02</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>290.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1900.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>98001.000000</td>\n",
+       "      <td>47.155900</td>\n",
+       "      <td>-122.519000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>1427.000000</td>\n",
+       "      <td>5.040000e+03</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>1190.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1951.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>98033.000000</td>\n",
+       "      <td>47.471000</td>\n",
+       "      <td>-122.328000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.250000</td>\n",
+       "      <td>1910.000000</td>\n",
+       "      <td>7.618000e+03</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>1560.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1975.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>98065.000000</td>\n",
+       "      <td>47.571800</td>\n",
+       "      <td>-122.230000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>2550.000000</td>\n",
+       "      <td>1.068800e+04</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>2210.000000</td>\n",
+       "      <td>560.000000</td>\n",
+       "      <td>1997.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>98118.000000</td>\n",
+       "      <td>47.678000</td>\n",
+       "      <td>-122.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>13540.000000</td>\n",
+       "      <td>1.651359e+06</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>9410.000000</td>\n",
+       "      <td>4820.000000</td>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>98199.000000</td>\n",
+       "      <td>47.777600</td>\n",
+       "      <td>-121.315000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           bedrooms     bathrooms   sqft_living      sqft_lot        floors  \\\n",
+       "count  21613.000000  21613.000000  21613.000000  2.161300e+04  21613.000000   \n",
+       "mean       3.370842      2.114757   2079.899736  1.510697e+04      1.494309   \n",
+       "std        0.930062      0.770163    918.440897  4.142051e+04      0.539989   \n",
+       "min        0.000000      0.000000    290.000000  5.200000e+02      1.000000   \n",
+       "25%        3.000000      1.750000   1427.000000  5.040000e+03      1.000000   \n",
+       "50%        3.000000      2.250000   1910.000000  7.618000e+03      1.500000   \n",
+       "75%        4.000000      2.500000   2550.000000  1.068800e+04      2.000000   \n",
+       "max       33.000000      8.000000  13540.000000  1.651359e+06      3.500000   \n",
+       "\n",
+       "          condition         grade    sqft_above  sqft_basement      yr_built  \\\n",
+       "count  21613.000000  21613.000000  21613.000000   21613.000000  21613.000000   \n",
+       "mean       3.409430      7.656873   1788.390691     291.509045   1971.005136   \n",
+       "std        0.650743      1.175459    828.090978     442.575043     29.373411   \n",
+       "min        1.000000      1.000000    290.000000       0.000000   1900.000000   \n",
+       "25%        3.000000      7.000000   1190.000000       0.000000   1951.000000   \n",
+       "50%        3.000000      7.000000   1560.000000       0.000000   1975.000000   \n",
+       "75%        4.000000      8.000000   2210.000000     560.000000   1997.000000   \n",
+       "max        5.000000     13.000000   9410.000000    4820.000000   2015.000000   \n",
+       "\n",
+       "       yr_renovated       zipcode           lat          long  \n",
+       "count  21613.000000  21613.000000  21613.000000  21613.000000  \n",
+       "mean      84.402258  98077.939805     47.560053   -122.213896  \n",
+       "std      401.679240     53.505026      0.138564      0.140828  \n",
+       "min        0.000000  98001.000000     47.155900   -122.519000  \n",
+       "25%        0.000000  98033.000000     47.471000   -122.328000  \n",
+       "50%        0.000000  98065.000000     47.571800   -122.230000  \n",
+       "75%        0.000000  98118.000000     47.678000   -122.125000  \n",
+       "max     2015.000000  98199.000000     47.777600   -121.315000  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f5a5fa45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price    \n",
+       "350000.0     172\n",
+       "450000.0     172\n",
+       "550000.0     159\n",
+       "500000.0     152\n",
+       "425000.0     150\n",
+       "            ... \n",
+       "427550.0       1\n",
+       "427800.0       1\n",
+       "427874.0       1\n",
+       "428040.0       1\n",
+       "7700000.0      1\n",
+       "Length: 3625, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "66f379f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: imbalanced-learn==0.9.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (0.9.0)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.7.3)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.21.5)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.1.0)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.1 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.0.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (2.2.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install imbalanced-learn==0.9.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "cfb531de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn==1.0.2 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (1.0.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (2.2.0)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.21.5)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.1.0)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.7.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scikit-learn==1.0.2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "31de9c10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "60dff0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3y/sg53g9yx2l152vz_g8dwv8p00000gn/T/ipykernel_46419/321774333.py:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  rf_model.fit(X_train, y_train)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BalancedRandomForestClassifier(random_state=1)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "rf_model = BalancedRandomForestClassifier(n_estimators=100, random_state=1) \n",
+    "rf_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ec460d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1987: UserWarning: y_pred contains classes not in y_true\n",
+      "  warnings.warn(\"y_pred contains classes not in y_true\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0021683422038241674"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = rf_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7f3c8218",
+   "id": "4631e246",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -424,9 +872,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mlenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -438,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
