--- a/Untitled1 2.ipynb
+++ b/Untitled1 2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "b1143629",
+   "execution_count": 15,
+   "id": "7f6a8a66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "3d5e624e",
+   "execution_count": 16,
+   "id": "e8ebea36",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler"
+    "from imblearn.metrics import classification_report_imbalanced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "4fe4d4f4",
+   "execution_count": 17,
+   "id": "0771ca37",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +233,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "9be712cb",
+   "execution_count": 18,
+   "id": "9a607d43",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +268,7 @@
        "Name: price, Length: 21613, dtype: float64>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "c47434e4",
+   "execution_count": 19,
+   "id": "4eecdd3a",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +439,7 @@
        "4 -122.045  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,8 +451,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "011b39bc",
+   "execution_count": 20,
+   "id": "1e311fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "a8b320a9",
+   "execution_count": 21,
+   "id": "1e709360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,8 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "db0f8e16",
+   "execution_count": 30,
+   "id": "b68864e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "0270eedd",
+   "execution_count": 31,
+   "id": "8fc27b55",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +701,7 @@
        "max     2015.000000  98199.000000     47.777600   -121.315000  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,8 +712,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "a419f3f9",
+   "execution_count": 32,
+   "id": "6ba4cf88",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +733,7 @@
        "Name: price, Length: 3625, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,8 +744,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "2d0a29d7",
+   "execution_count": 33,
+   "id": "1a197658",
    "metadata": {},
    "outputs": [
     {
@@ -754,11 +753,11 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: imbalanced-learn==0.9.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (0.9.0)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.7.3)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.1 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.0.2)\n",
       "Requirement already satisfied: joblib>=0.11 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.1.0)\n",
       "Requirement already satisfied: numpy>=1.14.6 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.21.5)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (2.2.0)\n",
-      "Requirement already satisfied: scipy>=1.1.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.7.3)\n",
-      "Requirement already satisfied: scikit-learn>=1.0.1 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from imbalanced-learn==0.9.0) (1.0.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -769,8 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "04231afd",
+   "execution_count": 34,
+   "id": "47c783cb",
    "metadata": {},
    "outputs": [
     {
@@ -778,10 +777,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn==1.0.2 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (1.0.2)\n",
-      "Requirement already satisfied: numpy>=1.14.6 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.21.5)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (2.2.0)\n",
       "Requirement already satisfied: joblib>=0.11 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.1.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (2.2.0)\n",
       "Requirement already satisfied: scipy>=1.1.0 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.7.3)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in /Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages (from scikit-learn==1.0.2) (1.21.5)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -792,41 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "f9580249",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.39873715 -1.44746357 -0.97983502 -0.22832133 -0.915427   -0.62918687\n",
-      "  -0.55883575 -0.73470764 -0.65868104 -0.54489777 -0.21012839  1.87015159\n",
-      "  -0.35257175 -0.30607896]\n",
-      " [-0.39873715  0.1756067   0.53363434 -0.18988538  0.93650577 -0.62918687\n",
-      "  -0.55883575  0.46084084  0.2451414  -0.6810785   4.7466776   0.87956753\n",
-      "   1.16156823 -0.74634143]\n",
-      " [-1.47395936 -1.44746357 -1.42625404 -0.12329847 -0.915427   -0.62918687\n",
-      "  -1.40958711 -1.22983377 -0.65868104 -1.29389179 -0.21012839 -0.9333882\n",
-      "   1.28353661 -0.13565477]\n",
-      " [ 0.67648506  1.14944885 -0.13055006 -0.2440144  -0.915427    2.44429394\n",
-      "  -0.55883575 -0.89169885  1.39751501 -0.20444594 -0.21012839  1.08516045\n",
-      "  -0.28328794 -1.271816  ]\n",
-      " [-0.39873715 -0.14900736 -0.43542158 -0.16965339 -0.915427   -0.62918687\n",
-      "   0.29191561 -0.13089528 -0.65868104  0.54454807 -0.21012839 -0.073636\n",
-      "   0.40955019  1.19933466]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "X = StandardScaler().fit_transform(X)\n",
-    "print(X[0:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "a994cbe7",
+   "execution_count": 35,
+   "id": "b942f115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,8 +802,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "64195919",
+   "execution_count": 36,
+   "id": "c6c824d8",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +812,7 @@
        "BalancedRandomForestClassifier(random_state=1)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,8 +825,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "16d4bb50",
+   "execution_count": 37,
+   "id": "5219e861",
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +843,7 @@
        "0.0021683422038241674"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5aaee4a5",
+   "id": "80164d82",
    "metadata": {},
    "outputs": [
     {
@@ -911,61 +877,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "597f2cb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EasyEnsembleClassifier(random_state=1)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from imblearn.ensemble import EasyEnsembleClassifier \n",
-    "eec = EasyEnsembleClassifier(random_state=1)\n",
-    "eec.fit(X_train, y_train) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "8eaa4161",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/johannahdelunas/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1987: UserWarning: y_pred contains classes not in y_true\n",
-      "  warnings.warn(\"y_pred contains classes not in y_true\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0006758469206724676"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred = eec.predict(X_test)\n",
-    "balanced_accuracy_score(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "c4138e80",
+   "id": "43cc7b50",
    "metadata": {},
    "outputs": [],
    "source": []
