--- a/crime_data.ipynb
+++ b/crime_data.ipynb
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e82debb8",
+   "id": "4bae4bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "65e8ade3",
+   "id": "ae40b749",
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3b7e9c53",
+   "id": "54e5760e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1727,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5ab93739",
+   "id": "868f3264",
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1c2bb40f",
+   "id": "55a95b26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "20e7661d",
+   "id": "98a4792f",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "78984bdd",
+   "id": "ff4128e8",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6dd4b468",
+   "id": "ee054ec1",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e34c61df",
+   "id": "d5b51566",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "117b25d8",
+   "id": "6dae8b9c",
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f16781cf",
+   "id": "fa159237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2057,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4874b88e",
+   "id": "0d4497ea",
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2080,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ec725a35",
+   "id": "8779fbf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2769e339",
+   "id": "fa6ffda9",
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6c21d411",
+   "id": "5224ec81",
    "metadata": {},
    "outputs": [
     {
@@ -2135,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7b53037e",
+   "id": "e02afa2c",
    "metadata": {},
    "outputs": [
     {
@@ -2155,8 +2155,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "3a29600f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data.to_csv(\"new_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5d21a7ce",
+   "id": "3391aa4c",
    "metadata": {},
    "outputs": [],
    "source": []
