--- a/price_log_Linear_Regression .ipynb
+++ b/price_log_Linear_Regression .ipynb
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cb91a9a3",
+   "id": "d3714039",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6cbe43ef",
+   "id": "129147f9",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e41979e",
+   "id": "718dd7f9",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a0c17327",
+   "id": "9edb957a",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe891b7",
+   "id": "5c646041",
    "metadata": {},
    "source": [
     "# Linear Regression #  "
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3dfcc41d",
+   "id": "906cb3c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e615c586",
+   "id": "7b45d39f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "347446b0",
+   "id": "38c575d8",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0ca5734c",
+   "id": "2d5f9bcb",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d3a3a1e8",
+   "id": "a081a89e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "acbb2dfd",
+   "id": "6a0cac2c",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1db594c5",
+   "id": "a5d7fa34",
    "metadata": {},
    "outputs": [
     {
@@ -791,8 +791,10 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "180872cf",
-   "metadata": {},
+   "id": "7027f7ac",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -812,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d46c8c7",
+   "id": "c133de6f",
    "metadata": {},
    "outputs": [],
    "source": []
