--- a/crime_data.ipynb
+++ b/crime_data.ipynb
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9e3e9ad9",
+   "id": "b8ee5964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5f48687a",
+   "id": "7b665d60",
    "metadata": {},
    "outputs": [
     {
@@ -1669,8 +1669,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cf7f5fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_merge_df.to_csv(\"new_mer.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "37c33c7b",
+   "id": "298d281e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f86d320f",
+   "id": "999a1bdb",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a5db3b44",
+   "id": "6100684d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "76b2fcb3",
+   "id": "2c45f9e1",
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f98757ae",
+   "id": "bf50d8b0",
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c14d29c0",
+   "id": "87c86c0b",
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c824b6fc",
+   "id": "b96b66a3",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6d300581",
+   "id": "419426e0",
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2015,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f4d1fa38",
+   "id": "53b2e2f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7800ae71",
+   "id": "95c3f2b8",
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2052,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "82ea052c",
+   "id": "07d03841",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +2063,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ed5018f2",
+   "id": "5952af3c",
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bdadd849",
+   "id": "1ca9c326",
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8b49bc5f",
+   "id": "3b380979",
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d28a85",
+   "id": "38547498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e116d942",
+   "id": "d3478c9b",
    "metadata": {},
    "outputs": [],
    "source": []
