--- a/Connection_to_AWS.ipynb
+++ b/Connection_to_AWS.ipynb
@@ -13,7 +13,7 @@
     "from sqlalchemy import create_engine\n",
     "housing_data_df = pd.read_csv('kc_house_data.csv')\n",
     "engine = create_engine(f\"postgresql+psycopg2://postgres:WealthySoon$12@final-project.cvh3vinbkvsr.us-east-2.rds.amazonaws.com:5432/final-project_db\")\n",
-    "housing_data_df.to_sql(name='housing_data', con=engine, index=False, if_exists=\"replace\")"
+    "housing_data_df.to_sql(name='washington_housing_data', con=engine, index=False, if_exists=\"replace\")"
    ]
   },
   {
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "engine.execute(\"DROP TABLE IF EXISTS stations\")"
+    "engine.execute(\"DROP TABLE IF EXISTS housing_data\")"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
