--- a/Connection_to_AWS.ipynb
+++ b/Connection_to_AWS.ipynb
@@ -2,33 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "f03c0b59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sqlalchemy\n",
     "import pandas as pd\n",
     "# sqlalchemy.py \n",
     "from sqlalchemy import create_engine\n",
-    "housing_data_df = pd.read_csv('kc_house_data.csv')\n",
+    "housing_data_df = pd.read_csv('new_merge.csv')\n",
     "engine = create_engine(f\"postgresql+psycopg2://postgres:WealthySoon$12@final-project.cvh3vinbkvsr.us-east-2.rds.amazonaws.com:5432/final-project_db\")\n",
     "housing_data_df.to_sql(name='washington_housing_data', con=engine, index=False, if_exists=\"replace\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "503a16d6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1d8d1fa8e08>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x223ce4b8fd0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
