--- a/price_log_Linear_Regression .ipynb
+++ b/price_log_Linear_Regression .ipynb
@@ -362,7 +362,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "9edb957a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -403,7 +405,7 @@
    "execution_count": 8,
    "id": "372fb63b",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
